feat: create a HTML structure for cv project

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <header>
       <h1>Lobanova Angelina</h1>
       <h2>Junior Frontend Developer</h2>
+      <img src="https://avatars.githubusercontent.com/u/106955412?v=4" alt="girl" width=200 heihgt=200> 
       <nav class="navbar">
-        <a href="#contact-info"></a>
-        <a href="#about"></a>
-        <a href="#skills"></a>
-        <a href="#work-experience"></a>
-        <a href="#code-example"></a>
-        <a href="#languages"></a>
-        <a href="#projects"></a>
+        <a href="#contact-info">Contacts</a>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#work-experience">Work Experience</a>
+        <a href="#code-example">Code Example</a>
+        <a href="#languages">Languages</a>
+        <a href="#projects">Projects</a>
       </nav>
     </header>
 
@@ -72,7 +73,7 @@
     
     <section id="work-experience">
       <header>
-        <h3>work Experience</h3>
+        <h3>Work Experience</h3>
       </header>
       <h4>Sells</h4>
       <p>07/01/20 - 05/02/22 - Office manager</p>
@@ -84,7 +85,54 @@
         Fulfillment of various orders of superiors, related to the work of the company. 
       </p>
     </section>
+
+    <section id="code-example">
+      <header>
+        <h3>Code Example</h3>
+        <pre>
+          <code> &lt;section id="projects"&gt;
+            &lt;header&gt;
+            &lt;h3&gt;Projects&lt;/h3&gt;
+            &lt;/header&gt;
+            &lt;p&gt;My first project is this
+            &lt;a href="https://lunarangelina.github.io/rsschool-cv/">CV&lt;/a&gt;
+            &lt;/p&gt;
+            &lt;/section&gt;
+        </code>
+        </pre>
+      </header>
+    </section>
   
+    <section id="courses">
+      <header>
+        <h3>Courses</h3>
+      </header>
+      <ul>
+        <li>JavaScript Manual on learnjavascript.ru (in progress)</li>
+        <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+      </ul>
+    </section>
+
+    <section id="languages">
+      <header>
+        <h3>Languages</h3>
+      </header>
+        <ul>
+          <li>Russian - native</li>
+          <li>English - C1, according to
+            <a href="https://www.efset.org/">efset.org</a>
+          </li>
+        </ul>
+    </section>
+
+    <section id="projects">
+      <header>
+        <h3>Projects</h3>
+      </header>
+      <p>My first project is this
+        <a href="https://lunarangelina.github.io/rsschool-cv/">CV</a>
+      </p>
+    </section>
   <script src="app.js"></script>
   </body>
 </html>
