feat: add footer

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       </nav>
     </header>
 
+    <main>
+
     <article id="conact-info">
       <header>
         <h3>Contact information</h3>
@@ -133,6 +135,15 @@
         <a href="https://lunarangelina.github.io/rsschool-cv/">CV</a>
       </p>
     </section>
+
+  </main>
+
+  <footer>
+    <p>© 2022 by Lobanova Angelina</p>
+    <a href="https://github.com/LunarAngelina">GitHub</a>
+    <img src="https://rs.school/images/rs_school_js.svg" alt="RS-school logo">
+  </footer>
+
   <script src="app.js"></script>
   </body>
 </html>
