fix: change lang atribute

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head> 
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -9,7 +9,7 @@
     <header>
       <h1>Lobanova Angelina</h1>
       <h2>Junior Frontend Developer</h2>
-      <img src="https://avatars.githubusercontent.com/u/106955412?v=4" alt="girl" width=200 heihgt=200> 
+      <img src="https://avatars.githubusercontent.com/u/106955412?v=4" alt="girl"> 
       <nav class="navbar">
         <a href="#contact-info">Contacts</a>
         <a href="#about">About</a>
