fix: change the entry of courses

--- a/index.html
+++ b/index.html
@@ -116,8 +116,12 @@
         <h3>Courses</h3>
       </header>
       <ul>
-        <li>JavaScript Manual on learnjavascript.ru (in progress)</li>
-        <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+        <li>'CSS for Beginners' on 
+          <a href="https://ru.code-basics.com/languages/css">ru.code-basics.com</a>
+        </li>
+        <li>'RS Schools Course «JavaScript/Front-end. Stage 0' on
+          <a href="https://rs.school/js-stage0/">rs.school/</a> 
+          (in progress)</li>
       </ul>
     </section>
 
