feat: add js file with score

--- a/travel/index.html
+++ b/travel/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/x-icon" href="../travel/icons/logo.svg">
   <title>Document</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
 
         <div class="header__logo">
           <a href="!#" class="header__logo-link">
-            <img src="C:/Users/Lunarchelli/Desktop/Ангелина/RS-school/rsschool-cv/travel/icons/logo.svg" alt="logo" class="header__logo-pic">
+            <img src="../travel/icons/logo.svg" alt="logo" class="header__logo-pic">
             Travel Portal 
           </a>
         </div>
@@ -23,16 +24,16 @@
         <nav class="header__nav">
           <ul class="header__list">
             <li class="header__list-item">
-              <a href="#!" class="header__link">How It Works</a>
+              <a href="#how-it-works" class="header__link">How It Works</a>
             </li>
             <li class="header__list-item">
-              <a href="#!" class="header__link">Plan Your Trip</a>
+              <a href="#plan-your-trip" class="header__link">Plan Your Trip</a>
             </li>
             <li class="header__list-item">
-              <a href="#!" class="header__link">Destinations</a>
+              <a href="#destinations" class="header__link">Destinations</a>
             </li>
             <li class="header__list-item">
-              <a href="#!" class="header__link">Travel Stories</a>
+              <a href="#travel-stories" class="header__link">Travel Stories</a>
             </li>
           </ul>
         </nav>
@@ -44,7 +45,7 @@
   </header>
 
   <main>
-    <section class="preview">
+    <section id="how-it-works" class="preview">
       <div class="wrapper">
         <h1 class="preview__title">
           Explore the beauty of the World</h1>
@@ -64,7 +65,7 @@
       </div>
     </section>
 
-    <section class="steps">
+    <section id="plan-your-trip" class="steps">
       <div class="steps-wrapper">
         <div class="wrapper">
           <h2 class="h2__title steps__title">
@@ -95,7 +96,7 @@
       </div>
     </section>
 
-    <section class="destinations">
+    <section id="destinations" class="destinations">
       <h2 class="h2__title destinations__title"> POPULAR DESTINATIONS</h2>
       <div class="destination-images">
         <div class="destination__image-wrapper">
@@ -126,7 +127,7 @@
 
   <div class="background-wrapper">
 
-    <section class="stories">
+    <section id="travel-stories" class="stories">
       <h2 class="h2__title stories__title">
         TRAVEL STORIES
       </h2>
@@ -221,13 +222,13 @@
           All Rights Reserved © Travel Portal
         </a>
         <div class="footer__section">
-          <a href="" class="footer__icon">
+          <a href="https://www.instagram.com/lunarangelina/" class="footer__icon">
             <img src="../travel/icons/instagram.svg" 
             alt="Instagram" class="footer_icon-img">
           </a>
-          <a href="" class="footer__icon">
-            <img src="../travel/icons/youtube.svg" 
-            alt="Youtube" class="footer_icon-img">
+          <a href="https://github.com/LunarAngelina" class="footer__icon">
+            <img src="../travel/icons/git-hub.svg" 
+            alt="GitHub" class="footer_icon-img">
           </a>
           <a href="" class="footer__icon">
             <img src="../travel/icons/twitter.svg" 
@@ -237,5 +238,6 @@
     </footer>
 
   </div>
+<script src="../travel/index.js"></script>
 </body>
 </html>
