feat: add circles

--- a/travel/index.html
+++ b/travel/index.html
@@ -117,6 +117,11 @@
           <p class="destination__image-desc">USA</p>
         </div>
       </div>
+      <div class="destinations__circle-wrapper">
+        <div class="destinations__circle"></div>
+        <div class="destinations__circle"></div>
+        <div class="destinations__circle"></div>
+      </div>
       <button class="section__button">
         <img src="../travel/icons/right-arrow.svg" 
         alt="right-arrow" 
@@ -217,10 +222,11 @@
      
     </section> 
     <footer class="footer__wrap">
-     
+      <div class="footer__section-ref">
         <a href="#!" class="footer__ref">
           All Rights Reserved © Travel Portal
         </a>
+      </div>
         <div class="footer__section">
           <a href="https://www.instagram.com/lunarangelina/" class="footer__icon">
             <img src="../travel/icons/instagram.svg" 
