refactor: change references

--- a/travel/index.html
+++ b/travel/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/x-icon" href="../travel/icons/logo.svg">
-  <title>Document</title>
+  <title>Travel</title>
 </head>
 <body>
 
@@ -73,17 +73,17 @@
          </h2>
          <div class="steps__icons">
           <div class="steps__items">
-            <img src="C:/Users/Lunarchelli/Desktop/Ангелина/RS-school/rsschool-cv/travel/icons/bike.svg" 
+            <img src="../travel/icons/bike.svg" 
             alt="bike" class="steps__items-image">
           </div>
 
           <div class="steps__items">
-            <img src="C:/Users/Lunarchelli/Desktop/Ангелина/RS-school/rsschool-cv/travel/icons/calendar.svg" 
+            <img src="../travel/icons/calendar.svg" 
             alt="calendar" class="steps__items-image">
           </div>
 
           <div class="steps__items">
-            <img src="C:/Users/Lunarchelli/Desktop/Ангелина/RS-school/rsschool-cv/travel/icons/plain.svg" 
+            <img src="../travel/icons/plain.svg" 
             alt="plain" class="steps__items-image">
           </div>
 
